--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@ function initialize() {
           { "weight": 4 }
         ]
       },{
+        "featureType": "transit.station",
+        "elementType": "geometry.fill",
+        "stylers": [
+          { "visibility": "off" }
+        ]
+      },{
         "featureType": "water",
         "elementType": "geometry",
         "stylers": [
